# Generated by Django 5.0 on 2024-01-24 15:21

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Codex',
            fields=[
                ('id', models.AutoField(primary_key=True, serialize=False)),
                ('support', models.CharField(blank=True, max_length=255, null=True)),
                ('height', models.IntegerField(blank=True, help_text='in cm', null=True)),
                ('date', models.CharField(blank=True, max_length=255, null=True)),
                ('folia', models.CharField(blank=True, max_length=255, null=True)),
                ('lines_per_page', models.CharField(blank=True, max_length=255, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='Details',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('author_attribution', models.CharField(blank=True, max_length=255, null=True)),
                ('scribe_attribution', models.CharField(blank=True, max_length=255, null=True)),
                ('book_headings', models.BooleanField(blank=True, null=True)),
                ('book_headigs_notes', models.CharField(blank=True, max_length=255, null=True)),
                ('book_initials', models.BooleanField(blank=True, null=True)),
                ('book_initials_notes', models.CharField(blank=True, max_length=255, null=True)),
                ('sanza_headings', models.BooleanField(blank=True, null=True)),
                ('sanza_headings_notes', models.CharField(blank=True, max_length=255, null=True)),
                ('stanza_initials', models.BooleanField(blank=True, null=True)),
                ('stanza_initials_notes', models.CharField(blank=True, max_length=255, null=True)),
                ('marginal_rubrics', models.BooleanField(blank=True, null=True)),
                ('marginal_rubrics_notes', models.CharField(blank=True, max_length=255, null=True)),
                ('filigree', models.BooleanField(blank=True, null=True)),
                ('filigree_notes', models.CharField(blank=True, max_length=255, null=True)),
                ('abbreviations', models.BooleanField(blank=True, null=True)),
                ('abbreviations_notes', models.CharField(blank=True, max_length=255, null=True)),
                ('catchwords', models.BooleanField(blank=True, null=True)),
                ('catchwords_notes', models.CharField(blank=True, max_length=255, null=True)),
                ('mabel_label', models.CharField(blank=True, max_length=255, null=True)),
                ('map_labels', models.BooleanField(blank=True, null=True)),
                ('map_labels_notes', models.CharField(blank=True, max_length=255, null=True)),
                ('distance_lines', models.BooleanField(blank=True, null=True)),
                ('distance_numbers', models.BooleanField(blank=True, null=True)),
                ('distance_numbers_notes', models.CharField(blank=True, max_length=255, null=True)),
                ('coat_of_arms', models.BooleanField(blank=True, null=True)),
                ('coat_of_arms_notes', models.CharField(blank=True, max_length=255, null=True)),
                ('is_sea_red', models.BooleanField(blank=True, null=True)),
                ('laiazzo', models.BooleanField(blank=True, null=True)),
                ('tabriz', models.BooleanField(blank=True, null=True)),
                ('rhodes_status', models.CharField(blank=True, max_length=255, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='EditorialStatus',
            fields=[
                ('id', models.AutoField(primary_key=True, serialize=False)),
                ('siglum', models.CharField(blank=True, max_length=255, null=True)),
                ('editorial_priority', models.IntegerField(blank=True, null=True)),
                ('collated', models.BooleanField(blank=True, null=True)),
                ('access', models.IntegerField(blank=True, null=True)),
                ('digitized', models.BooleanField(blank=True, null=True)),
                ('spatial_priority', models.CharField(blank=True, max_length=6, null=True)),
                ('dataset', models.CharField(blank=True, max_length=255, null=True)),
                ('group', models.CharField(blank=True, max_length=255, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='Library',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('city', models.CharField(blank=True, max_length=255, null=True)),
                ('library', models.CharField(blank=True, max_length=255, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='Reference',
            fields=[
                ('id', models.AutoField(primary_key=True, serialize=False)),
                ('bert', models.CharField(blank=True, max_length=6, null=True)),
                ('reference', models.CharField(blank=True, max_length=255, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='TextDecorations',
            fields=[
                ('id', models.AutoField(primary_key=True, serialize=False)),
                ('text_script', models.CharField(blank=True, max_length=255, null=True)),
                ('label_script', models.CharField(blank=True, max_length=255, null=True)),
                ('diagrams', models.BooleanField(blank=True, null=True)),
                ('maps', models.BooleanField(blank=True, null=True)),
                ('illumination', models.BooleanField(blank=True, null=True)),
                ('other', models.CharField(blank=True, max_length=255, null=True)),
                ('relative_quality', models.CharField(blank=True, max_length=255, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='ViewerNotes',
            fields=[
                ('id', models.AutoField(primary_key=True, serialize=False)),
                ('date_seen', models.DateField(blank=True, null=True)),
                ('viewer', models.CharField(blank=True, max_length=255, null=True)),
                ('notes', models.TextField(blank=True, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='ManuscriptLocation',
            fields=[
                ('id', models.AutoField(primary_key=True, serialize=False)),
                ('shelfmark', models.CharField(blank=True, max_length=255, null=True)),
                ('digitized_url', models.URLField(blank=True, help_text="The URL to the digitized manuscript. If there isn't one, leave blank.", max_length=255, null=True)),
                ('library', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='manuscript.library')),
            ],
        ),
        migrations.CreateModel(
            name='SingleManuscript',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('codex', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='manuscript.codex')),
                ('editorial_status', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='manuscript.editorialstatus')),
                ('library', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='manuscript.library')),
                ('manuscript_details', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='manuscript.details')),
                ('reference', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='manuscript.reference')),
                ('text_decorations', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='manuscript.textdecorations')),
                ('viewer_notes', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='manuscript.viewernotes')),
            ],
        ),
        migrations.CreateModel(
            name='Stanzas',
            fields=[
                ('id', models.AutoField(primary_key=True, serialize=False)),
                ('stanza_number', models.IntegerField(blank=True, help_text='The line number of the stanza in the manuscript.', null=True)),
                ('stanza_text', models.TextField(blank=True, null=True)),
                ('stanza_notes', models.TextField(blank=True, null=True)),
                ('stanza_translation', models.TextField(blank=True, null=True)),
                ('stanza_language', models.CharField(blank=True, choices=[('en', 'English'), ('it', 'Italian'), ('la', 'Latin'), ('fr', 'French')], max_length=2, null=True)),
                ('stanza_translation_notes', models.TextField(blank=True, null=True)),
                ('manuscript', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.PROTECT, to='manuscript.singlemanuscript')),
            ],
        ),
    ]
